--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/ActivoFijo/Consultar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/ActivoFijo/Consultar.cshtml
@@ -43,7 +43,7 @@
             <div class="col-md-1">
                 <div class="form-group">
                     <div id="btnModificar" hidden>
-                        <a type="button" class="btn btn-primary form-control" title="Modificar" href="@Url.Action("Modificar", "ActivoFijo", new { ActivoFijo = "Banco", IdEmpresa = Model.IdEmpresa, IdActivoFijo = Model.IdActivoFijo }, null)">
+                        <a type="button" class="btn btn-primary form-control" title="Modificar" href="@Url.Action("Modificar", "ActivoFijo", new { Area = "ActivoFijo", IdEmpresa = Model.IdEmpresa, IdActivoFijo = Model.IdActivoFijo }, null)">
                             <i class="fa fa-edit"></i>
                         </a>
                     </div>
