--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/CatalogoTipoAF/Consultar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/CatalogoTipoAF/Consultar.cshtml
@@ -1,6 +1,6 @@
-﻿@model Core.Erp.Info.ActivoFijo.Af_Area_Info
+﻿@model Core.Erp.Info.ActivoFijo.Af_CatalogoTipo_Info
 @{
-    ViewBag.Title = "Consultar área de activo fijo";
+    ViewBag.Title = "Consultar tipo de catálogo de activo fijo";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
         Response.Redirect("~/Account/Login");
@@ -8,10 +8,9 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
-@using (Html.BeginForm("Consultar", "AreaAF", FormMethod.Post, new { @class = "form", @role = "form" }))
+@using (Html.BeginForm("Consultar", "CatalogoTipoAF", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
-    @Html.HiddenFor(q => q.IdEmpresa);
-    @Html.HiddenFor(q => q.IdArea);
+    @Html.HiddenFor(q => q.IdTipoCatalogo)
     @Html.HiddenFor(q => q.Nuevo, new { @id = "Nuevo" })
     @Html.HiddenFor(q => q.Modificar, new { @id = "Modificar" })
     @Html.HiddenFor(q => q.Anular, new { @id = "Anular" })
@@ -26,10 +25,10 @@
     }
     <div class="row">
         <div class="col-md-12">
-            <div class="col-md-offset-9 col-md-1">
+            <div class="col-md-offset-10 col-md-1">
                 <div class="form-group">
                     <div id="btnNuevo" hidden>
-                        <a type="button" class="btn btn-primary form-control" title="Nuevo" href="@Url.Action("Nuevo", "AreaAF", new { Area = "ActivoFijo", IdEmpresa = Model.IdEmpresa }, null)">
+                        <a type="button" class="btn btn-primary form-control" title="Nuevo" href="@Url.Action("Nuevo", "CatalogoTipoAF", new { Area = "ActivoFijo" }, null)">
                             <i class="fa fa-plus"></i>
                         </a>
                     </div>
@@ -38,23 +37,26 @@
             <div class="col-md-1">
                 <div class="form-group">
                     <div id="btnModificar" hidden>
-                        <a type="button" class="btn btn-primary form-control" title="Modificar" href="@Url.Action("Modificar", "AreaAF", new { Area = "ActivoFijo", IdEmpresa = Model.IdEmpresa, IdArea = Model.IdArea }, null)">
+                        <a type="button" class="btn btn-primary form-control" title="Modificar" href="@Url.Action("Modificar", "CatalogoTipoAF", new { Area = "ActivoFijo", IdTipoCatalogo = Model.IdTipoCatalogo }, null)">
                             <i class="fa fa-edit"></i>
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-1">
-                <div class="form-group">
-                    <div id="btnAnular" hidden>
-                        <a type="button" class="btn btn-primary form-control" title="Anular" href="@Url.Action("Anular", "AreaAF", new { Area = "ActivoFijo", IdEmpresa = Model.IdEmpresa, IdArea = Model.IdArea }, null)">
-                            <i class="fa fa-remove"></i>
                         </a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-3">
+                <div class="form-group">
+                    <label for="IdTipoCatalogo">Código*</label>
+                    @Html.TextBoxFor(q => q.IdTipoCatalogo, new { @class = "form-control", @readonly = "readonly" })
+                    @Html.ValidationMessageFor(m => m.IdTipoCatalogo, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-12">
@@ -68,13 +70,14 @@
     </div>
 
     <div class="box-footer">
-        <a class="btn btn-default" href="@Url.Action("Index","AreaAF",new { Area = "ActivoFijo" },null)">Cancelar</a>
+        <a class="btn btn-default" href="@Url.Action("Index","CatalogoTipoAF",new { Area = "ActivoFijo" },null)">Cancelar</a>
     </div>
 
     @section Scripts {
         @Scripts.Render("~/bundles/jqueryval")
     }
 }
+
 <script type="text/javascript">
     $(function () {
         MostrarBotonesAccion();
