--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/CatalogoTipoAF/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/CatalogoTipoAF/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Core.Erp.Info.ActivoFijo.Af_CatalogoTipo_Info
 @{
     ViewBag.Title = "Consulta de tipos de catálogos de activo fijo";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
@@ -10,8 +10,8 @@
 
 @using (Html.BeginForm())
 {
-
-    @Html.Action("GridViewPartial_catalogotipo_af")
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
+    @Html.Action("GridViewPartial_catalogotipo_af", new { Nuevo = ViewBag.Nuevo })
 
 }
 
