--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/CategoriaAF/_GridViewPartial_categoria_activo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/CategoriaAF/_GridViewPartial_categoria_activo.cshtml
@@ -3,7 +3,7 @@
     var grid = Html.DevExpress().GridView(settings =>
     {
         settings.Name = "GridView_categoria_activo";
-        settings.CallbackRouteValues = new { Controller = "CategoriaAF", Action = "GridViewPartial_categoria_activo", IdEmpresa = ViewBag.IdEmpresa, IdActivoFijoTipo = ViewBag.IdActivoFijoTipo };
+        settings.CallbackRouteValues = new { Controller = "CategoriaAF", Action = "GridViewPartial_categoria_activo", IdEmpresa = ViewBag.IdEmpresa, IdActivoFijoTipo = ViewBag.IdActivoFijoTipo, Nuevo = ViewBag.Nuevo };
         settings.KeyFieldName = "IdCategoriaAF";
         settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
 
@@ -61,20 +61,18 @@
             c.Caption = "#";
             c.SetDataItemTemplateContent(tc =>
             {
-                if (Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A")
-                {
-                    ViewContext.Writer.Write(
-                Html.ActionLink("Modificar", "Modificar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdActivoFijoTipo = DataBinder.Eval(tc.DataItem, "IdActivoFijoTipo"), IdCategoriaAF = DataBinder.Eval(tc.DataItem, "IdCategoriaAF") }) + "&nbsp;" +
-                        Html.ActionLink("Anular", "Anular", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdActivoFijoTipo = DataBinder.Eval(tc.DataItem, "IdActivoFijoTipo"), IdCategoriaAF = DataBinder.Eval(tc.DataItem, "IdCategoriaAF")},
-                            new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
-                    );
-                }
+                ViewContext.Writer.Write(
+                    Html.ActionLink("Consultar", "Consultar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdActivoFijoTipo = DataBinder.Eval(tc.DataItem, "IdActivoFijoTipo"), IdCategoriaAF = DataBinder.Eval(tc.DataItem, "IdCategoriaAF") })
+                );
             });
             c.SetHeaderTemplateContent(tc =>
             {
-                ViewContext.Writer.Write(
-                    Html.ActionLink("Nuevo", "Nuevo", new { IdEmpresa = Core.Erp.Web.Helps.SessionFixed.IdEmpresa, IdActivoFijoTipo = ViewBag.IdActivoFijoTipo }).ToHtmlString()
-                );
+                if (ViewBag.Nuevo == true)
+                {
+                    ViewContext.Writer.Write(
+                        Html.ActionLink("Nuevo", "Nuevo", new { IdEmpresa = Core.Erp.Web.Helps.SessionFixed.IdEmpresa, IdActivoFijoTipo = ViewBag.IdActivoFijoTipo }).ToHtmlString()
+                    );
+                }
             });
             c.Settings.AllowDragDrop = DefaultBoolean.False;
             c.Settings.AllowSort = DefaultBoolean.False;
@@ -94,6 +92,7 @@
 
             });
         });
+        settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
     });
 }
 @grid.Bind(Model).GetHtml()
