--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/DepreciacionAF/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/DepreciacionAF/Index.cshtml
@@ -9,6 +9,9 @@
 }
 @using (Html.BeginForm("Index", "DepreciacionAF", FormMethod.Post, new { @role = "form", @class = "form" }))
 {
+    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
+
     <div class="box ">
         <div class="box-header with-border">
             <div class="row">
@@ -89,7 +92,7 @@
             </div>
         </div>
         <div class="box-body">
-            @Html.Action("GridViewPartial_depreciacion", new { fecha_ini = Model.fecha_ini, fecha_fin = Model.fecha_fin })
+            @Html.Action("GridViewPartial_depreciacion", new { Nuevo = ViewBag.Nuevo })
         </div>
         <!-- /.box-body -->
         <div class="box-footer">
