--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/TipoAF/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/TipoAF/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Core.Erp.Info.ActivoFijo.Af_Activo_fijo_tipo_Info
 @{
     ViewBag.Title = "Consulta de tipos de activo fijo";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
@@ -9,7 +9,8 @@
 }
 @using (Html.BeginForm())
 {
-   
-    @Html.Action("GridViewPartial_tipoactivo")
+    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
+    @Html.Action("GridViewPartial_tipoactivo", new { Nuevo = ViewBag.Nuevo })
 
 }
