--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/VentaActivo/_GridViewPartial_venta_activo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/VentaActivo/_GridViewPartial_venta_activo.cshtml
@@ -3,7 +3,7 @@
     var grid = Html.DevExpress().GridView(settings =>
     {
         settings.Name = "GridView_venta_activo";
-        settings.CallbackRouteValues = new { Controller = "VentaActivo", Action = "GridViewPartial_venta_activo" };
+        settings.CallbackRouteValues = new { Controller = "VentaActivo", Action = "GridViewPartial_venta_activo", Nuevo = ViewBag.Nuevo };
         settings.KeyFieldName = "IdVtaActivo";
         settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
 
@@ -61,20 +61,18 @@
             c.Caption = "#";
             c.SetDataItemTemplateContent(tc =>
             {
-                if (Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A")
-                {
-                    ViewContext.Writer.Write(
-                Html.ActionLink("Modificar", "Modificar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdVtaActivo = DataBinder.Eval(tc.DataItem, "IdVtaActivo") }) + "&nbsp;" +
-                        Html.ActionLink("Anular", "Anular", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdVtaActivo = DataBinder.Eval(tc.DataItem, "IdVtaActivo") },
-                            new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
-                    );
-                }
+                ViewContext.Writer.Write(
+                    Html.ActionLink("Consultar", "Consultar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdVtaActivo = DataBinder.Eval(tc.DataItem, "IdVtaActivo") })
+                );
             });
             c.SetHeaderTemplateContent(tc =>
             {
-                ViewContext.Writer.Write(
-                    Html.ActionLink("Nuevo", "Nuevo", new { IdEmpresa = Core.Erp.Web.Helps.SessionFixed.IdEmpresa }).ToHtmlString()
-                );
+                if (ViewBag.Nuevo == true)
+                {
+                    ViewContext.Writer.Write(
+                        Html.ActionLink("Nuevo", "Nuevo", new { IdEmpresa = Core.Erp.Web.Helps.SessionFixed.IdEmpresa }).ToHtmlString()
+                    );
+                }
             });
             c.Settings.AllowDragDrop = DefaultBoolean.False;
             c.Settings.AllowSort = DefaultBoolean.False;
@@ -108,6 +106,7 @@
             });
             column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
         });
+        settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
     });
 }
 @grid.Bind(Model).GetHtml()
